consistency + fixes
soft deleting in place (nothing removed from .txt files)
code is consistent with each other neat+clean
basic comments